--- a/vignettes/mediation.Rnw
+++ b/vignettes/mediation.Rnw
@@ -899,17 +899,13 @@ variables are each measured at the individual or group level
 \citep[see][]{Krull:2001,Zhang:2009}. Regardless of these types,
 researchers can use the \code{mediate} function to analyze multilevel
 data by choosing appropriate statistical models for the mediator and
-outcome variables. In this section, we illustrate the use of our
-package for multilevel data by focusing on two types of data
-structure: (1) the treatment is assigned at the group level whereas
-the mediator and outcome are measured at the individual level, and (2)
-both the treatment and mediator are group-level variables while the
-outcome is recorded at the individual level. Other combinations of
-data levels can also 
-be handled via straightforward modifications to the syntax used in
-these two types of data structure, and the vignette of the \pkg{mediation} package
-contains some examples of the individual-level treatment and mediator with
-group-level random effects.  
+outcome variables. In this section, we illustrate the use of our package
+for multilevel data by focusing on two types of data structure: (1) the
+treatment is assigned at the group level whereas the mediator and
+outcome are measured at the individual level, and (2) both the treatment
+and mediator are group-level variables while the outcome is recorded at
+the individial level. Other combinations of data levels can be handled
+via straightforward modifications to the syntax used in these examples.  
 
 To illustrate the usage, we analyze data from the Education
 Longitudinal Study (2002)\footnote{To protect the anonymity of the
