--- a/vignettes/v59i05.bib
+++ b/vignettes/v59i05.bib
@@ -292,9 +292,9 @@
 }
 
 @Manual{mediation,
-  title =	 {\pkg{mediation}: \proglang{R} Package for Causal
+  title =	 {\pkg{mediation}: Causal
                   Mediation Analysis},
-  author =	 {Dustin Tingley and Teppei Yamamoto and Luke Keele
+  author =	 {Dustin Tingley and Teppei Yamamoto and Kentaro Hirose and Luke Keele
                   and Kosuke Imai},
   year =	 {2013},
   note =	 {\proglang{R} package version 4.4},
