--- a/vignettes/v59i05.bib
+++ b/vignettes/v59i05.bib
@@ -292,12 +292,12 @@
 }
 
 @Manual{mediation,
-  title =	 {\pkg{mediation}: Causal
+  title =	 {\pkg{mediation}: \proglang{R} Package for Causal
                   Mediation Analysis},
   author =	 {Dustin Tingley and Teppei Yamamoto and Kentaro Hirose and Luke Keele
                   and Kosuke Imai},
   year =	 {2013},
-  note =	 {\proglang{R} package version 4.4},
+  note =	 {\proglang{R} package version 4.4.2},
   url =		 {http://CRAN.R-project.org/package=mediation},
 }
 
