--- a/ChangeLog
+++ b/ChangeLog
@@ -22,3 +22,4 @@ version      date  description
 4.4      12/09/13  Added option for the BCa method for bootstrap CIs in mediate
 4.4.1    08/12/14  Vignette updated to the JSS paper; categorical treatment for medsens
 4.4.2    08/26/14  Switched mvrnorm to rmvnorm; fixed bug in print.summary.order
+4.4.3    11/22/14  Weights for multimed
