--- a/ChangeLog
+++ b/ChangeLog
@@ -24,4 +24,4 @@ version      date  description
 4.4.2    08/26/14  Switched mvrnorm to rmvnorm; fixed bug in print.summary.order
 4.4.3    11/22/14  Weights for multimed; Moved some packages from Depends
 	to Imports
-4.4.3    1/18/14  Bug fix for an error message which appears when a glmer is used with weights 
+4.4.4    02/18/14  Direct effects for multimed; Bug fix for an error message which appears when a glmer is used with weights
