--- a/ChangeLog
+++ b/ChangeLog
@@ -22,9 +22,7 @@ version      date  description
 4.4      12/09/13  Added option for the BCa method for bootstrap CIs in mediate
 4.4.1    08/12/14  Vignette updated to the JSS paper; categorical treatment for medsens
 4.4.2    08/26/14  Switched mvrnorm to rmvnorm; fixed bug in print.summary.order
-4.4.3    11/22/14  Weights for multimed; Moved some packages from Depends
-	to Imports
+4.4.3    11/22/14  Weights for multimed; Moved some packages from Depends to Imports
 4.4.4    02/18/14  Direct effects for multimed; Bug fix for an error message which appears when a glmer is used with weights
-4.4.5                      Bug fix for bias-corrected bootstrap confidence
-	intervals
+4.4.5              Bug fix for bias-corrected bootstrap confidence intervals
 4.4.6    05/08/17   Bug fix for multilevel; Bug fix for mediate-example 2
